--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -20,7 +20,7 @@
 	<br/>
 
 	<h2>
-		I'm having fun coding
+		I'm having fun coding!
 	</h2>
 	
 	<%= link_to 'feedMe', '#', :class => 'btn btn-primary btn-large' %>
