--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -4,6 +4,7 @@
 	box-shadow: 2px -2px 2px 2px rgba(36,32,33,0.50);
 	background-color: rgba(36,32,33,0.50);
 	padding: 1%;
+	color:white;
 }
 
 body {
@@ -16,14 +17,16 @@ body {
 
 .custom-h1 {
 	color:#F2138A;
-	font-family: 'Hammersmith One',Helvetica Neue Light, Helvetica Neue, Helvetica, sans-serif;
+	font-family: Helvetica Neue Light, Helvetica Neue, Helvetica, sans-serif;
 	font-weight: 100;
 	font-size: 64px;
+	line-height: 64px;
 }
 
 h2 {
 	color:#F2F75C;
 	font-family: 'Hammersmith One',Helvetica Neue Light, Helvetica Neue, Helvetica, sans-serif;
-	font-weight: 200;
-	font-size: 32px
+	font-weight: 100;
+	font-size: 32px;
+	line-height: 32px;
 }
