Styling the form page

--- a/app/views/pics/new.html.erb
+++ b/app/views/pics/new.html.erb
@@ -1,11 +1,13 @@
-<div class="smurfy">
+<div class="smurfy span6 offset4 text-center">
+
+<h1 class="custom-h1"> How did Kenny die? </h1>
 
 	<%= simple_form_for @pic do |f| %>
-		<%= f.input :title %>
-		<%= f.input :subtitle %>
-		<%= f.input :message %>
+		<%= f.input :title, label: 'What\'s this pic about?', placeholder: 'Kenny and the Moose' %>
+		<%= f.input :subtitle, label: 'More details', placeholder: 'e.g. The Moose is huge' %>
+		<%= f.input :message, label: 'What were Kenny\'s last words?', placeholder: 'FML' %>
 
-		<%= f.submit "Save" %>
+		<%= f.submit "Log", :class => 'btn btn-warning btn-large' %>
 
 	<% end %>
 
