added images and making links work

--- a/app/views/pics/new.html.erb
+++ b/app/views/pics/new.html.erb
@@ -6,6 +6,7 @@
 		<%= f.input :title, label: 'What\'s this pic about?', placeholder: 'Kenny and the Moose' %>
 		<%= f.input :subtitle, label: 'More details', placeholder: 'e.g. The Moose is huge' %>
 		<%= f.input :message, label: 'What were Kenny\'s last words?', placeholder: 'FML' %>
+		<%= f.input :image, label: 'Upload your image' %>		
 
 		<%= f.submit "Log", :class => 'btn btn-warning btn-large' %>
 
