--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -23,7 +23,7 @@
 		I'm having fun coding!
 	</h2>
 	
-	<%= link_to 'feedMe', '#', :class => 'btn btn-primary btn-large' %>
+	<%= link_to 'feedMe', new_pic_path , :class => 'btn btn-primary btn-large' %>
 
 
 </div>
