--- a/app/views/pics/index.html.erb
+++ b/app/views/pics/index.html.erb
@@ -1,18 +1,26 @@
-<% @pics.each do |pic| %>
+<% @pics.each_slice(3) do |slice| %>
+	<div class="row">	
+		<%= slice.each do |pic| %>
 
-	<div class="smurfy span4 text-center">
-		
-		<h1 class="custom-h1">
-			Title: <%= pic.title %>
-		<h1/>
-		<br/>
-		<h2>
-			Subtitle: <%= pic.subtitle %>
-		<h2/>
-		<br/>
-		<h2/>
-			Message: <%= pic.message %>
-		<h2/>
-	</div>
+			<div class="smurfy span4 text-center">
+				
+				<h1 class="custom-h1">
+					Title: <%= pic.title %>
+				<h1/>
+				<br/>
+				<h2>
+					Subtitle: <%= pic.subtitle %>
+				<h2/>
+				<br/>	
+				<h2/>
+					<%= image_tag pic.image %>
+				<h2/>
+				<br/>
+				<h2/>
+					Message: <%= pic.message %>
+				<h2/>
 
+			</div>
+		<% end %>
+	</div>	
 <% end %>
